feat: createdBy and updatedBy in resource & revision
